--- a/.gitignore
+++ b/.gitignore
@@ -241,3 +241,9 @@ TSWLatexianTemp*
 # generated if using elsarticle.cls
 *.spl
 *_temp.*
+*bin/
+*build/
+*.gradle/
+*.vscode/
+*.settings/
+*.class
