--- a/.gitmodules
+++ b/.gitmodules
@@ -10,3 +10,6 @@
 [submodule "2020_21/CNU/tutorial02"]
 	path = 2020_21/CNU/tutorial02
 	url = https://github.com/cnu-2021/cnu-w02-tutorial-MiltFra
+[submodule "2020_21/CNU/tutorial03"]
+	path = 2020_21/CNU/tutorial03
+	url = https://github.com/cnu-2021/cnu-w03-tutorial-MiltFra
