--- a/.gitmodules
+++ b/.gitmodules
@@ -16,3 +16,6 @@
 [submodule "2020_21/CNU/tutorial04"]
 	path = 2020_21/CNU/tutorial04
 	url = https://github.com/cnu-2021/cnu-w04-tutorial-MiltFra
+[submodule "2020_21/CNU/tutorial05"]
+	path = 2020_21/CNU/tutorial05
+	url = https://github.com/cnu-2021/cnu-w05-tutorial-MiltFra
