--- a/.gitmodules
+++ b/.gitmodules
@@ -25,3 +25,6 @@
 [submodule "2020_21/CNU/tutorial07"]
 	path = 2020_21/CNU/tutorial07
 	url = https://github.com/cnu-2021/cnu-w07-tutorial-MiltFra
+[submodule "2020_21/CNU/A1"]
+	path = 2020_21/CNU/A1
+	url = https://github.com/cnu-2021/cnu-A1-MiltFra
