--- a/.gitmodules
+++ b/.gitmodules
@@ -1,45 +1,45 @@
 [submodule "2020_21/INF2-CS/cw"]
 	path = 2020_21/INF2-CS/cw
-	url = https://git.ecdf.ed.ac.uk/s1971811/inf2c-cs-20
+	url = git@git.ecdf.ed.ac.uk:s1971811/inf2c-cs-20.git
 [submodule "2020_21/INF2C/cw"]
 	path = 2020_21/INF2C/cw
-	url = https://git.ecdf.ed.ac.uk/s1971811/inf2c-cs-20
+	url = git@git.ecdf.ed.ac.uk:s1971811/inf2c-cs-20.git
 [submodule "2020_21/CNU/tutorial01"]
 	path = 2020_21/CNU/tutorial01
-	url = https://github.com/cnu-2021/cnu-w01-tutorial-MiltFra
+	url = git@github.com:cnu-2021/cnu-w01-tutorial-MiltFra.git
 [submodule "2020_21/CNU/tutorial02"]
 	path = 2020_21/CNU/tutorial02
-	url = https://github.com/cnu-2021/cnu-w02-tutorial-MiltFra
+	url = git@github.com:cnu-2021/cnu-w02-tutorial-MiltFra.git
 [submodule "2020_21/CNU/tutorial03"]
 	path = 2020_21/CNU/tutorial03
-	url = https://github.com/cnu-2021/cnu-w03-tutorial-MiltFra
+	url = git@github.com:cnu-2021/cnu-w03-tutorial-MiltFra.git
 [submodule "2020_21/CNU/tutorial04"]
 	path = 2020_21/CNU/tutorial04
-	url = https://github.com/cnu-2021/cnu-w04-tutorial-MiltFra
+	url = git@github.com:cnu-2021/cnu-w04-tutorial-MiltFra.git
 [submodule "2020_21/CNU/tutorial05"]
 	path = 2020_21/CNU/tutorial05
-	url = https://github.com/cnu-2021/cnu-w05-tutorial-MiltFra
+	url = git@github.com:cnu-2021/cnu-w05-tutorial-MiltFra.git
 [submodule "2020_21/CNU/tutorial06"]
 	path = 2020_21/CNU/tutorial06
-	url = https://github.com/cnu-2021/cnu-w06-tutorial-MiltFra
+	url = git@github.com:cnu-2021/cnu-w06-tutorial-MiltFra.git
 [submodule "2020_21/CNU/tutorial07"]
 	path = 2020_21/CNU/tutorial07
-	url = https://github.com/cnu-2021/cnu-w07-tutorial-MiltFra
+	url = git@github.com:cnu-2021/cnu-w07-tutorial-MiltFra.git
 [submodule "2020_21/CNU/A1"]
 	path = 2020_21/CNU/A1
-	url = https://github.com/cnu-2021/cnu-A1-MiltFra
+	url = git@github.com:cnu-2021/cnu-A1-MiltFra.git
 [submodule "2020_21/CNU/tutorial08"]
 	path = 2020_21/CNU/tutorial08
-	url = https://github.com/cnu-2021/cnu-w08-tutorial-MiltFra
+	url = git@github.com:cnu-2021/cnu-w08-tutorial-MiltFra.git
 [submodule "2020_21/CNU/tutorial09"]
 	path = 2020_21/CNU/tutorial09
-	url = https://github.com/cnu-2021/cnu-w09-tutorial-MiltFra
+	url = git@github.com:cnu-2021/cnu-w09-tutorial-MiltFra.git
 [submodule "2020_21/CNU/A2"]
 	path = 2020_21/CNU/A2
-	url = https://github.com/cnu-2021/cnu-A2-MiltFra
+	url = git@github.com:cnu-2021/cnu-A2-MiltFra.git
 [submodule "2020_21/CNU/tutorial10"]
 	path = 2020_21/CNU/tutorial10
-	url = https://github.com/cnu-2021/cnu-w10-tutorial-MiltFra
+	url = git@github.com:cnu-2021/cnu-w10-tutorial-MiltFra.git
 [submodule "2021_22/ILP"]
 	path = 2021_22/ILP
 	url = git@github.com:MiltFra/ILP.git
@@ -49,3 +49,6 @@
 [submodule "2021_22/CT/cw1"]
 	path = 2021_22/CT/cw1
 	url = git@github.com:compiling-techniques/cw1-parser-MiltFra.git
+[submodule "2020_21/INF2-FDS/cw03"]
+	path = 2020_21/INF2-FDS/cw03
+	url = git@github.com:Inf2-FDS-2020-2021/final-project-indivisual-s1971811.git
